test/e2e/test_data/rollout/headless_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-service
  labels:
    app: echoserver
spec:
  ports:
    - port: 8080
      name: web
  clusterIP: None
  selector:
    app: echoserver
