test/e2e/test_data/rollout/manual_test.yaml
apiVersion: rollouts.kruise.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
spec:
  objectRef:
    workloadRef:
      apiVersion: apps.kruise.io/v1beta1
      kind: StatefulSet
      name: echoserver
  strategy:
    canary:
      steps:
        - weight: 20
          pause: {}
        - weight: 40
          pause: {duration: 10}
        - weight: 60
          pause: {duration: 10}
        - weight: 80
          pause: {duration: 10}
        - weight: 100
---
apiVersion: v1
kind: Service
metadata:
  name: headless-service
  labels:
    app: echoserver
spec:
  ports:
    - port: 8080
      name: web
  clusterIP: None
  selector:
    app: echoserver
---
apiVersion: apps.kruise.io/v1beta1
kind: StatefulSet
metadata:
  name: echoserver
  labels:
    apps: echoserver
    apps.kruise.io/rollout-id: "1"
spec:
  selector:
    matchLabels:
      app: echoserver
  serviceName: headless-service
  replicas: 5
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - name: echoserver
          image: cilium/echoserver:latest
          # imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          env:
            - name: PORT
              value: '8080'
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: NODE_NAME
              value: version1
