test/e2e/test_data/rollout/manual_test_clone.yaml
apiVersion: apps.kruise.io/v1alpha1
kind: CloneSet
metadata:
  name: echoserver
  labels:
    app: echoserver
    apps.kruise.io/rollout-id: "1"
spec:
  replicas: 5
  updateStrategy:
    maxUnavailable: 0
    maxSurge: 1
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - name: echoserver
          image: cilium/echoserver:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          env:
            - name: PORT
              value: '8080'
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: NODE_NAME
              value: version1
---
apiVersion: rollouts.kruise.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
spec:
  objectRef:
    workloadRef:
      apiVersion: apps.kruise.io/v1alpha1
      kind: CloneSet
      name: echoserver
  strategy:
    canary:
      steps:
        - weight: 20
          pause: {}
        - weight: 40
          pause: {duration: 10}
        - weight: 60
          pause: {duration: 10}
        - weight: 80
          pause: {duration: 10}
        - weight: 100
