test/e2e/test_data/rollout/rollout_canary_base.yaml
apiVersion: rollouts.kruise.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
spec:
  objectRef:
    type: workloadRef
    workloadRef:
      apiVersion: apps/v1
      kind: Deployment
      name: echoserver
  strategy:
    type: canary
    canary:
      steps:
      - weight: 20
        pause: {}
      - weight: 40
        pause: {duration: 10}
      - weight: 60
        pause: {duration: 10}
      - weight: 80
        pause: {duration: 10}
      - weight: 100
      trafficRouting:
      - service: echoserver
        type: nginx
        nginx:
          ingress: echoserver
