test/e2e/test_data/rollout/rollout_v1beta1_native_daemonset_base.yaml
apiVersion: rollouts.kruise.io/v1beta1
kind: Rollout
metadata:
  name: rollouts-demo
  namespace: default
spec:
  workloadRef:
    apiVersion: apps/v1
    kind: DaemonSet
    name: test-daemonset
  strategy:
    canary:
      enableExtraWorkloadForCanary: false
      steps:
        - replicas: 1
        - replicas: 50%
        - replicas: 100%
